--- a/src/02-lightbox.html
+++ b/src/02-lightbox.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SimpleLightbox library</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.11.0/simple-lightbox.min.css" integrity="sha512-2fuz5SZm+ilUXvkAiuhKoQcWBkZqRAEKhBnlIioPGOBju8E1+C6MwtpvNt/pidBXgDTU/liw70r4/4X1YJ46BQ==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
 </head>
